tests/baselines/reference/illegalSuperCallsInConstructor.errors.txt
==== tests/cases/compiler/illegalSuperCallsInConstructor.ts (6 errors) ====
    class Base {
        x: string;
    }
     
    class Derived extends Base {
        constructor() {
        ~~~~~~~~~~~
!!! error TS2105: Constructors for derived classes must contain a 'super' call.
            var r2 = () => super();
                           ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
            var r3 = () => { super(); }
                             ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
            var r4 = function () { super(); }
                                   ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
            var r5 = {
                get foo() {
                    super();
                    ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
                    return 1;
                },
                set foo(v: number) {
                    super();
                    ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
                }
            }
        }
    }